@@ -185,17 +185,18 @@ if (updatenotify_exists('zfs_import_config'))
 			</table>
 			<br />
 			<table width="100%" border="0" cellpadding="0" cellspacing="0">
-				<?php html_titleline(gettext('Datasets').' ('.count($zfs['datasets']['dataset']).')', 9);?>
+				<?php html_titleline(gettext('Datasets').' ('.count($zfs['datasets']['dataset']).')', 10);?>
 				<tr>
-					<td width="16%" class="listhdrlr"><?=gettext("Name");?></td>
+					<td width="14%" class="listhdrlr"><?=gettext("Name");?></td>
 					<td width="14%" class="listhdrr"><?=gettext("Pool");?></td>
-					<td width="10%" class="listhdrr"><?=gettext("Compression");?></td>
-					<td width="10%" class="listhdrr"><?=gettext("Dedup");?></td>
-					<td width="10%" class="listhdrr"><?=gettext("Canmount");?></td>
-					<td width="10%" class="listhdrr"><?=gettext("Quota");?></td>
-					<td width="10%" class="listhdrr"><?=gettext("Extended attributes");?></td>
-					<td width="10%" class="listhdrr"><?=gettext("Readonly");?></td>
-					<td width="10%" class="listhdrr"><?=gettext("Snapshot Visibility");?></td>
+					<td width="9%" class="listhdrr"><?=gettext("Compression");?></td>
+					<td width="9%" class="listhdrr"><?=gettext("Dedup");?></td>
+					<td width="9%" class="listhdrr"><?=gettext("Sync");?></td>
+					<td width="9%" class="listhdrr"><?=gettext("Canmount");?></td>
+					<td width="9%" class="listhdrr"><?=gettext("Quota");?></td>
+					<td width="9%" class="listhdrr"><?=gettext("Extended attributes");?></td>
+					<td width="9%" class="listhdrr"><?=gettext("Readonly");?></td>
+					<td width="9%" class="listhdrr"><?=gettext("Snapshot Visibility");?></td>
 				</tr>
 				<?php foreach ($zfs['datasets']['dataset'] as $dataset):?>
 				<tr>
@@ -203,6 +204,7 @@ if (updatenotify_exists('zfs_import_config'))
 					<td class="listr"><?= $dataset['pool'][0]; ?></td>
 					<td class="listr"><?= $dataset['compression']; ?></td>
 					<td class="listr"><?= $dataset['dedup']; ?></td>
+					<td class="listr"><?= $dataset['sync']; ?></td>
 					<td class="listr"><?= isset($dataset['canmount']) ? 'on' : 'off'; ?></td>
 					<td class="listr"><?= empty($dataset['quota']) ? 'none' : $dataset['quota']; ?></td>
 					<td class="listr"><?= isset($dataset['xattr']) ? 'on' : 'off'; ?></td>
@@ -213,13 +215,14 @@ if (updatenotify_exists('zfs_import_config'))
 			</table>
 			<br />
 			<table width="100%" border="0" cellpadding="0" cellspacing="0">
-				<?php html_titleline(gettext('Volumes').' ('.count($zfs['volumes']['volume']).')', 5);?>
+				<?php html_titleline(gettext('Volumes').' ('.count($zfs['volumes']['volume']).')', 6);?>
 				<tr>
 					<td width="16%" class="listhdrlr"><?=gettext("Name");?></td>
-					<td width="21%" class="listhdrr"><?=gettext("Pool");?></td>
-					<td width="21%" class="listhdrr"><?=gettext("Size");?></td>
-					<td width="21%" class="listhdrr"><?=gettext("Compression");?></td>
-					<td width="21%" class="listhdrr"><?=gettext("Dedup");?></td>
+					<td width="17%" class="listhdrr"><?=gettext("Pool");?></td>
+					<td width="17%" class="listhdrr"><?=gettext("Size");?></td>
+					<td width="17%" class="listhdrr"><?=gettext("Compression");?></td>
+					<td width="17%" class="listhdrr"><?=gettext("Dedup");?></td>
+					<td width="16%" class="listhdrr"><?=gettext("Sync");?></td>
 				</tr>
 				<?php foreach ($zfs['volumes']['volume'] as $volume):?>
 				<tr>
@@ -228,6 +231,7 @@ if (updatenotify_exists('zfs_import_config'))
 					<td class="listr"><?= $volume['volsize']; ?></td>
 					<td class="listr"><?= $volume['compression']; ?></td>
 					<td class="listr"><?= $volume['dedup']; ?></td>
+					<td class="listr"><?= $volume['sync']; ?></td>
 				</tr>
 				<?php endforeach;?>
 			</table>
