@@ -67,6 +67,7 @@ if (isset($uuid) && (FALSE !== ($cnid = array_search_ex($uuid, $a_dataset, "uuid
 	$pconfig['pool'] = $a_dataset[$cnid]['pool'][0];
 	$pconfig['compression'] = $a_dataset[$cnid]['compression'];
 	$pconfig['dedup'] = $a_dataset[$cnid]['dedup'];
+	$pconfig['sync'] = $a_dataset[$cnid]['sync'];
 	$pconfig['atime'] = $a_dataset[$cnid]['atime'];	
 	$pconfig['canmount'] = isset($a_dataset[$cnid]['canmount']);
 	$pconfig['readonly'] = isset($a_dataset[$cnid]['readonly']);
@@ -80,6 +81,7 @@ if (isset($uuid) && (FALSE !== ($cnid = array_search_ex($uuid, $a_dataset, "uuid
 	$pconfig['pool'] = "";
 	$pconfig['compression'] = "off";
 	$pconfig['dedup'] = "off";
+	$pconfig['sync'] = "standard";
 	$pconfig['atime'] = "off";	
 	$pconfig['canmount'] = true;
 	$pconfig['readonly'] = false;
@@ -87,13 +89,6 @@ if (isset($uuid) && (FALSE !== ($cnid = array_search_ex($uuid, $a_dataset, "uuid
 	$pconfig['snapdir'] = false;
 	$pconfig['quota'] = "";
 	$pconfig['desc'] = "";
-}
-if ($pconfig['dedup'] == "") {
-	$pconfig['dedup'] = "off";
-}
-
-if ($pconfig['atime'] == "") {
-	$pconfig['atime'] = "off";
 }
 
 if ($_POST) {
@@ -120,6 +115,7 @@ if ($_POST) {
 		$dataset['pool'] = $_POST['pool'];
 		$dataset['compression'] = $_POST['compression'];
 		$dataset['dedup'] = $_POST['dedup'];
+		$dataset['sync'] = $_POST['sync'];
 		$dataset['atime'] = $_POST['atime'];
 		$dataset['canmount'] = isset($_POST['canmount']) ? true : false;
 		$dataset['readonly'] = isset($_POST['readonly']) ? true : false;
@@ -187,8 +183,10 @@ function enable_change(enable_change) {
 					<?php html_combobox("compression", gettext("Compression"), $pconfig['compression'], $a_compressionmode, gettext("Controls the compression algorithm used for this dataset. The 'lzjb' compression algorithm is optimized for performance while providing decent data compression. Setting compression to 'On' uses the 'lzjb' compression algorithm. You can specify the 'gzip' level by using the value 'gzip-N', where N is an integer from 1 (fastest) to 9 (best compression ratio). Currently, 'gzip' is equivalent to 'gzip-6'."), true);?>
 					<?php $a_dedup = array("on" => gettext("On"), "off" => gettext("Off"), "verify" => "verify", "sha256" => "sha256", "sha256,verify" => "sha256,verify"); ?>					
 					<?php html_combobox("dedup", gettext("Dedup"), $pconfig['dedup'], $a_dedup, gettext("Controls the dedup method. <br><b><font color='red'>NOTE/WARNING</font>: See <a href='http://wiki.nas4free.org/doku.php?id=documentation:setup_and_user_guide:disks_zfs_datasets_dataset' target='_blank'>ZFS datasets & deduplication</a> wiki article BEFORE using this feature.</b></br>"), true);?>
+					<?php $a_sync = array("standard" => "standard", "always" => "always", "disabled" => "disabled"); ?>
+					<?php html_combobox("sync", gettext("Sync"), $pconfig['sync'], $a_sync, gettext("Controls the behavior of synchronous requests."), true);?>
 					<?php $a_atime = array("on" => gettext("On"), "off" => gettext("Off")); ?>
-					<?php html_combobox("atime", gettext("Access Time (atime)"), $pconfig['atime'], $a_atime, gettext("Turn access time on or off for this dataset"), true);?>
+					<?php html_combobox("atime", gettext("Access Time (atime)"), $pconfig['atime'], $a_atime, gettext("Turn access time on or off for this dataset."), true);?>
 					<?php html_checkbox("canmount", gettext("Canmount"), !empty($pconfig['canmount']) ? true : false, gettext("If this property is disabled, the file system cannot be mounted."), "", false);?>
 					<?php html_checkbox("readonly", gettext("Readonly"), !empty($pconfig['readonly']) ? true : false, gettext("Controls whether this dataset can be modified."), "", false);?>
 					<?php html_checkbox("xattr", gettext("Extended attributes"), !empty($pconfig['xattr']) ? true : false, gettext("Enable extended attributes for this file system."), "", false);?>
