@@ -14,6 +14,7 @@ Changes:
 - Add kern.geom.debugflags when installing.
 - Add rpcinfo utility.
 - Add vmstat utility.
+- Add ability to edit sync property on ZFS dataset and volume.
 - Wait response of LAN interface if static with gateway.
 - Run umount before iSCSI initiator shutdown.
 - Remount all after netif is up for iSCSI device.
